Fixed bug #44660 (Indexed and reference assignment to propery of non-object don't trigger warning)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_3@263605 c90b9560-bf6c-de11-be94-00142212c4b1